# Chess

./: Chess.cabal  LICENSE  README.md
src/Chess/: .Board.hs.swp  Board.hs  Game.hs  Move.hs  Moves.hs
src/Chess/Move/: Logic.hs  Type.hs
test/Chess/: BoardSpec.hs  MoveSpec.hs
