name:                Chess
version:             0.1.0.0
synopsis:            Chess.
-- description:         
license:             MIT
license-file:        LICENSE
author:              Sam Davis
maintainer:          sam@samgd.com
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Chess.Board
                       Chess.Moves
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9, listsafe >=0.1 && <0.2
  -- hs-source-dirs:      
  default-language:    Haskell2010
