name:                chess
version:             0.1.0.0
synopsis:            Chess.
license:             MIT
license-file:        LICENSE
author:              Sam Davis
maintainer:          sam@samgd.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  ghc-options:
      -Wall -O2
  hs-source-dirs:
      src
  exposed-modules:
      Chess.Board
      Chess.Game
      Chess.Move
  build-depends:
      base >=4.8 && <4.9
    , listsafe >=0.1 && <0.2
  default-language:
      Haskell2010

test-suite spec
  ghc-options:
      -Wall
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      test
  main-is:
      Spec.hs
  build-depends:
      base >=4.8 && <4.9
    , chess
    , listsafe >=0.1 && <0.2
    , hspec ==2.*
    , QuickCheck >=2.8
